# hand-pose-graph

./: .gitignore  000001_rsampled.ply  bones_names.json  bones_names_complete.json  bones_names_complete_ue4.json  filter.py  icvl2pointcloud.py  notes.txt  output_109.json  output_7062.json  output_error_final.json  plot_both_losses.py  plot_euclidean_distance.py  plot_joint_error.py  plot_mean_error.py  plot_quaternion2euler.py  plot_quaternion2euler_thresholded.py  plot_validation_loss.py  pose_reference.json  pose_reference_fix.json  sample_pointclouds.py  scene_test.json  test_ground_truth.py  test_pose_rebuild.py  testicvl.py  testicvl_normalized.py  testunrealhands.py  train-test.py  train-testv2.py  train.py  train_final.py  trainicvl.py  trainv2.py
cpp/: CMakeLists.txt  hands_clustering.hpp
cpp/src/: hand_downsample.cpp  hands_clustering.cpp  happly.h
cpp/src/utils/: hand_model.h  transformation.hpp
data/nyudv2/: nyudv2_generate.py  nyudv2_get40mapping.py
data/unrealhands/processed/: unrealhands_k3_0.pt  unrealhands_k3_1.pt  unrealhands_k3_2.pt  unrealhands_k3_3.pt  unrealhands_k3_4.pt
data/unrealhands/raw/cloud/: 000001.ply  000002.ply  000003.ply  000004.ply  000005.ply
data/unrealhands/raw/joints/: 000001.json  000002.json  000003.json  000004.json  000005.json
dataset/: datahand.py  icvl_normalized_otf.py  icvl_otf.py  icvl_otf.py.save  nyudv2.py  nyudv2_otf.py  unrealhands_otf.py  unrealhands_otfr.py
dataset/utils/: plot_pointcloud.py
loss/: cross_entropy_2d.py  factory.py  geodesic_distance.py  geodesic_distance_weighted.py  mean_absolute_error.py  mean_error_distance.py  mean_square_error.py  root_mean_square_error.py
network_3d/: gcn_network.py  gcn_network_bkp_robust.py  gcn_network_hand.py  gcn_network_hand2.py  gcn_network_hand3.py  gcn_network_pure_qcnn.py  gcn_networkv2.py  utils.py
utils/: gnt_cloud.py  qutils.py
utils/knn_cloud/: CMakeLists.txt  main.cpp
