cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(REGION_GROWN_CLUSTERING CXX)
set (CMAKE_CXX_STANDARD 11)
find_package(PCL 1.3 REQUIRED COMPONENTS common io search features filters segmentation)
find_package(Boost 1.36.0 REQUIRED COMPONENTS filesystem program_options)

include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
#list(REMOVE_ITEM VTK_LIBRARIES "vtkproj4")
list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
add_definitions(${PCL_DEFINITIONS})
add_executable(hands_clustering src/hands_clustering.cpp)
target_link_libraries(hands_clustering ${PCL_LIBRARIES}  ${Boost_LIBRARIES})
#set_target_properties(hands_clustering PROPERTIES LINKER_LANGUAGE CXX CXX_STANDARD 17 CXX_EXTENSIONS OFF)
